--- a/BibleReading.xcodeproj/xcshareddata/xcschemes/bibleReading.xcscheme
+++ b/BibleReading.xcodeproj/xcshareddata/xcschemes/bibleReading.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BibleReading::BibleReadingLibTests"
+               BuildableName = "BibleReadingLibTests.xctest"
+               BlueprintName = "BibleReadingLibTests"
+               ReferencedContainer = "container:BibleReading.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
